i-say.com (archived on 2007-12-29)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 21499,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.1,
  "homepage_snapshot_redirected_domain": "i-say.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071006070602id_/http://i-say.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071006070602id_/http%3A//i-say.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "i-say.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071229231949id_/http%3A//i-say.com/privacy.aspx",
  "policy_title": "Ipsos i-Say Privacy Policy - For Online Panel Members",
  "policy_url": "i-say.com/privacy.aspx",
  "sha1": "4412e95c67815feb46108077a101a529ecee1a5c",
  "simhash": 5799656016833791545,
  "simhash_updated": true,
  "site_hostname": "i-say.com",
  "site_url": "http://i-say.com",
  "smog": 15.11,
  "strict_updated": true,
  "timestamp": "20071229231949",
  "word_count": 3524,
  "year": 2007
}

--- a/i/i-/i-s/i-say.com.html
+++ b/i/i-/i-s/i-say.com.html
@@ -1,15 +1,16 @@
-<!--The following is the downloaded HTML source of the i-say.com privacy policy that was archived on 2007-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070629022014id_/http%3A//www.i-say.com/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the i-say.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229231949id_/http%3A//i-say.com/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//w3c//dtd xhtml 1.0 transitional//en" "http://www.w3.org/tr/xhtml1/dtd/xhtml1-transitional.dtd"><html lang="en"><head>
 	<title>Ipsos i-Say Privacy Policy - For Online Panel Members</title>
 
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-	<meta name="robots" content="noindex,nofollow">
-	<meta name="robots" content="noarchive">
+	<meta name="description" content="Join the Ipsos i-Say online survey panel and have your say. Win great prizes. It's fun easy and free!">
+	<meta name="keywords" content="online surveys, market research, join panel, surveys, take survey, answer questionnaire, test new products, opinion, quiz poll, rewards, join free, win prize ">
 	<link rel="stylesheet" type="text/css" media="all" title="regular" href="lib/global.css">
 	<script src="lib/global.js" type="text/javascript"></script>
 	<script language="javascript" type="text/javascript" src="/aspnet_client/system_web/1_1_4322/WebUIValidation.js"></script>
+
 </head>
 
 <body class="members">
@@ -163,22 +164,21 @@
 	<div id="navigation">
 
 
-		<h2>Member's Services</h2>
 	
 		<ul>
 			<li class="homehide"><a href="default.aspx" id="homelink">Home</a></li>
-			<li><a href="rewards.aspx" id="rewardslink">New! Ipsos i-Say Rewards Program</a></li>
+			<li><a href="rewards.aspx" id="rewardslink">i-Say Rewards Program</a></li>
 			<li><a href="winners.aspx" id="winnerslink">Winners</a></li>
 <!--
 			<li><a href="inthenews.aspx" id="inthenewslink">Ipsos in the News</a></li>
 -->
-			<li><a href="quickpolls.aspx" id="quickpolllink">Quick Polls</a></li>
-			<li><a href="mem_faq.aspx" id="faqlink">FAQ</a></li>
+			<li><a href="quickpolls.aspx" id="suggestpolllink">Suggest-a-Poll</a></li>
+			<li><a href="mem_faq.aspx" id="faqlink">Member FAQ</a></li>
 			<li><a href="referafriend.aspx" id="referafriendlink">Refer a Friend</a></li>
 			<li><a href="newsletters.aspx" id="newsletterslink">Newsletter</a></li>
 			<li><a href="changeofinfo.aspx" id="changeofinfolink">Change of Info</a></li>
 			<li><a href="contactus.aspx" id="contactuslink">Contact Us</a></li>
-			<li class="homehide"><a href="https://join.I-say.com/recruit.aspx?URLID=2" target="_blank">Join Now</a></li>
+			<li class="homehide"><a href="https://register.i-say.com/research/links/2/index.php" target="_blank">Join Now</a></li>
 			<li class="homehide"><a href="takeasurvey.aspx" id="takeasurveylink">Take our Latest Survey</a></li>
 		</ul>
 
@@ -194,13 +194,20 @@
 
 	<p class="badges">
 		<a href="http://www.ipsos.com" target="_blank"><img src="i/logo-ipsos.gif" width="42" height="40" border="0" alt="ipsos"></a>
-		<a href="http://seal.habeas.com/index.php?code=hJ9mooXH8HO0r8Qz_1C02vyRiFJeC4P2" target="_blank"><img src="https://seal.habeas.com/webseal/hJ9mooXH8HO0r8Qz_1C02vyRiFJeC4P2/habeas_webseal.gif" border="0" alt="Habeas Certified Sender Seal" title="This email sender is certified by Habeas to be reputable and follow all practices listed in their privacy policy. Click here to provide feedback."></a>
+		<a href="https://seal.habeas.com/index.php?code=hJ9mooXH8HPHt2IY8biv7gNosaemHEk8">
+<img src="https://seal.habeas.com/webseal/hJ9mooXH8HPHt2IY8biv7gNosaemHEk8/habeas_webseal.gif" alt="Habeas Certified Sender Seal" border="0" title="This email sender is certified by Habeas to be reputable and follow all practices listed in their privacy policy. Click here to provide feedback."></a>
 
 
-		<a href="/privacy.aspx"><img src="/images/finalmark.gif" width="121" height="32" border="0" alt="reviewed by trust-e - site privacy statement"></a>
-	</p>
+		<a href="/privacy.aspx"><img src="/images/finalmark.gif" width="121" height="32" border="0" alt="reviewed by trust-e - site privacy statement"></a>	</p>
 
 </div><!-- /footer -->
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-2730814-1";
+urchinTracker();
+</script>
+ 
 
 </div><!-- /shell -->
 
