--- a/1/10/10-/10-strike.com.html
+++ b/1/10/10-/10-strike.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 10-strike.com privacy policy that was archived on 2007-05-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070521045707id_/http%3A//www.10-strike.com/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 10-strike.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229232531id_/http%3A//www.10-strike.com/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><!-- DW6 --><head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -36,9 +36,13 @@ Products:<br>
 <a href="/lanstate/">LANState</a>
 <a href="/searchmydiscs/">SearchMyDiscs</a>
 <a href="/network-file-search/">Network File Search</a>
+<a href="/connectionmonitor/">Connection Monitor</a>
 <a href="/mp3scan/">MP3-Scanner</a>
 <a href="/logan/">Log-Analyzer</a>
 <a href="/junk-mail-remover/">Junk Mail Remover</a>
+<br>
+<a href="/order.shtml"><font color="red"><b>Christmas Discounts:<br>
+<font size="+1">20% OFF!</font><br></b></font></a>
 </div> 
 
 <div id="content"> 
