--- a/r/re/red/redcross.ca.html
+++ b/r/re/red/redcross.ca.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the redcross.ca privacy policy that was archived on 2007-04-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070423212543id_/http%3A//www.redcross.ca/main.asp%3Fid%3D6566) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the redcross.ca privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229233316id_/http%3A//www.redcross.ca/main.asp%3Fid%3D6566) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/1999/REC-html401-19991224/loose.dtd"><html><head>
 <script language="JavaScript">
@@ -48,7 +48,7 @@ function MM_swapImage() { //v3.0
 <table width="760" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr valign="top">
     <td width="283" height="108"><a href="http://www.redcross.ca"><img name="_01_Home_r1_c1" src="images/logocrc.gif" width="282" height="108" border="0" alt="Canadian Red Cross"></a></td>
-    <td width="478" height="108"><img name="_01_Home_r1_c5" src="images/banners/0/en/volunteerweek_banner2007.jpg" width="478" height="108" border="0" alt="Anywhere. Anytime."></td>
+    <td width="478" height="108"><img name="_01_Home_r1_c5" src="images/banners/0/en/DeliveryOfGoods.jpg" width="478" height="108" border="0" alt="Anywhere. Anytime."></td>
 </tr>
 <tr valign="top">
     <td><img name="_01_Home_r1_c4" src="images/spacer.gif" width="19" height="25" border="0" alt=""></td>
@@ -150,6 +150,11 @@ function MM_swapImage() { //v3.0
 				</tbody></table></td>
   </tr>
 </tbody></table>
-
+<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-817860-1";
+urchinTracker();
+</script>
 
 </body></html>
