--- a/w/wb/wbs/wbshop.com.html
+++ b/w/wb/wbs/wbshop.com.html
@@ -1,15 +1,10 @@
-<!--The following is the downloaded HTML source of the wbshop.com privacy policy that was archived on 2007-06-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070623073940id_/http%3A//www.wbshop.com/content.xml%3Fcid%3Dprivacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wbshop.com privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229235718id_/http%3A//www.wbshop.com/content.xml%3Fcid%3Dprivacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd"><html><head>
 
 <title>The Official Warner Bros Shop with exclusive merchandise from Harry Potter, Tweety, Taz, Batman, Superman, Scooby-Doo, 300 Movie and more - Privacy Policy</title>
-<script language="JavaScript1.2" src="/kernel/utils.js" type="text/javascript"></script><script language="JavaScript1.2" src="/kernel/menu.js" type="text/javascript"></script><script language="JavaScript1.2" src="/kernel/flashobject.js" type="text/javascript"></script><script language="javascript" src="/kernel/newline_utils.js"></script><script language="JavaScript">
-		 function OpenCertDetails()
-		  {
-				thewindow=window.open('https://www.thawte.com/cgi/server/certdetails.exe?code=canova37-4', 'anew',config='height=400,width=450,toolbar=no,menubar=no,scrollbars=yes,resizable=no,location=no,directories=no,status=yes');
-			}
-			</script><meta name="Description" content="Shop at the Warner Bros. online store, wbshop.com, for unique merchandise, collectibles, memorabilia, toys, games, calendars, DVD's, videos, clothing, accessories, posters and more of your favorite characters like Tweety, Taz, Batman, Superman and from your favorite Warner Bros. movies like Harry Potter and Scooby-Doo and the 300 movie.">
+<script language="JavaScript1.2" src="/kernel/utils.js" type="text/javascript"></script><script language="JavaScript1.2" src="/kernel/menu.js" type="text/javascript"></script><script language="JavaScript1.2" src="/kernel/flashobject.js" type="text/javascript"></script><script language="javascript" src="/kernel/newline_utils.js"></script><meta name="Description" content="Shop at the Warner Bros. online store, wbshop.com, for unique merchandise, collectibles, memorabilia, toys, games, calendars, DVD's, videos, clothing, accessories, posters and more of your favorite characters like Tweety, Taz, Batman, Superman and from your favorite Warner Bros. movies like Harry Potter and Scooby-Doo and the 300 movie.">
 <meta name="keywords" content="Warner Bros., Warner Brothers, WB, Wbshop, Wbstore, wb, movies, shopping, merchandise, collectibles, memorabilia, exclusive, official, gifts, collectibles, memorabilia, cartoons, Batman, Bugs Bunny, Harry Potter, Looney Tunes, The Matrix, Marvin the Martian, The Powerpuff Girls, Scooby-Doo, Superman, Taz, Tweety, Wizard of Oz, Dorothy, Tin Man, Scarecrow,  Hedwig, Hogwarts, Quidditch, 300 movie, yellow brick road, books, calendars, clothing, accessories, costumes, lunchbox, hats, backpacks, watches, t-shirts, party goods, posters, standees, stationery, toys, games, dolls, mug, figures, action figures, Halloween, Christmas">
 <meta name="verify-v1" content="vrEp4MzxI1VWBcULliW9GBqt9/CcK2Mie4qrqRZddk0=">
 <script language="JavaScript" type="text/JavaScript"></script><script language="javascript">
@@ -217,6 +212,7 @@ if (bV >= 4 && !opera) {
 <img src="/kernel/images/speck.gif" width="1" height="5" class="nospace"><select name="category_id" class="inputbox" onchange="if (document.shop_by_title.category_id.options[document.shop_by_title.category_id.selectedIndex].value != '0') document.shop_by_title.submit();"><option value="0">Shop by Title</option>
 <option value="0">-------</option>
 <option value="107359">300</option>
+<option value="207899">A Christmas Story</option>
 <option value="2629">Baby Looney Tunes</option>
 <option value="2585">Batman</option>
 <option value="2630">Bugs Bunny</option>
@@ -227,6 +223,7 @@ if (bV >= 4 && !opera) {
 <option value="6228">DC Comics</option>
 <option value="5865">Flintstones</option>
 <option value="6438">Friends</option>
+<option value="207907">Frosty the Snowman</option>
 <option value="5850">Gremlins</option>
 <option value="6231">Hanna-Barbera</option>
 <option value="106741">Happy Feet</option>
@@ -234,20 +231,22 @@ if (bV >= 4 && !opera) {
 <option value="5913">Jetsons</option>
 <option value="2720">Looney Tunes</option>
 <option value="2810">Marvin the Martian</option>
-<option value="107401">Penelope Pitstop</option>
 <option value="4935">Polar Express</option>
+<option value="107401">Racegirl/Penelope Pitstop</option>
 <option value="2949">Scooby-Doo</option>
 <option value="4167">Smallville</option>
 <option value="106750">Speedy Gonzales</option>
-<option value="2993">Superman</option>
+<option value="207983">Superman</option>
 <option value="3038">Taz</option>
 <option value="3780">Terminator 3</option>
 <option value="3708">The Matrix</option>
 <option value="5916">Tom &amp; Jerry</option>
 <option value="3083">Tweety</option>
 <option value="106738">V for Vendetta</option>
+<option value="208357">Where the Wild Things Are</option>
 <option value="3126">Wizard of Oz</option>
-<option value="3167">Wonder Woman</option></select><input type="image" src="/kernel/images/wbshop/header/bn_go.gif" width="28" height="20" border="0" align="absmiddle" name="submit_shop_by_title" value="1"><br><img src="/kernel/images/wbshop/header/text_movie.gif" width="156" height="8">
+<option value="3167">Wonder Woman</option>
+<option value="207901">Year Without a Santa Claus</option></select><input type="image" src="/kernel/images/wbshop/header/bn_go.gif" width="28" height="20" border="0" align="absmiddle" name="submit_shop_by_title" value="1"><br><img src="/kernel/images/wbshop/header/text_movie.gif" width="156" height="8">
 </td>
 <td width="5"><img src="/kernel/images/wbshop/header/header_blue_right.gif" width="5" height="43"></td>
 </tr></tbody></table>
@@ -293,17 +292,14 @@ if (bV >= 4 && !opera) {
                 var s_purchaseID= '';
                 var s_eVar1     = '';
                 var s_eVar2     = '';
-                </script><script language="javascript" src="/kernel/s_code_remote_new.js"></script><img name="s_i_newlshop" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/newlshop/1/G.6-PD-R/s92701996861701?[AQB]&amp;ndh=1&amp;t=30/0/2020%203%3A0%3A17%204%200&amp;pageName=Content%20%5Bprivacy%5D&amp;cc=USD&amp;g=https%3A//web.archive.org/web/20070623073940id_/http%253A//www.wbshop.com/content.xml%253Fcid%253Dprivacy&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]"><script language="JavaScript">
+                </script><script language="javascript" src="/kernel/s_code_remote_new.js"></script><img name="s_i_newlshop" height="1" width="1" border="0" alt="" src="https://102.112.2O7.net/b/ss/newlshop/1/G.6-PD-R/s97660499044841?[AQB]&amp;ndh=1&amp;t=30/0/2020%203%3A0%3A17%204%200&amp;pageName=Content%20%5Bprivacy%5D&amp;cc=USD&amp;g=https%3A//web.archive.org/web/20071229235718id_/http%253A//www.wbshop.com/content.xml%253Fcid%253Dprivacy&amp;s=800x600&amp;c=24&amp;j=1.3&amp;v=N&amp;k=Y&amp;bw=1366&amp;bh=768&amp;[AQE]"><script language="JavaScript">
 								s_wds(s_account); s_ca(s_account);
 								function sendAnalyticsEvent(str){
 									ns=s_account; if(str!=null)ns+=","+str;void(s_gs(ns));}
 								function sendLinkEvent(str,lnkname){
 									ns=s_account; if(str!=""&&str!=null)ns+=","+str; s_linkType="o"; s_lnk=true;
 									s_linkName=lnkname; void(s_gs(ns));}
-								</script><table width="100%" border="0" cellspacing="0" cellpadding="0">
-<tbody><tr><td><div class="page-breadcrumbs"><span class="smalltext"><img border="0" src="/kernel/images/speck.gif" class="nospace" width="8" height="15"><a href="/" class="breadcrumbnav">Home</a><span class="breadcrumb-separator">&nbsp;»&nbsp;</span><b>Privacy Policy</b></span></div></td></tr>
-<tr><td align="left">&nbsp;</td></tr>
-</tbody></table>
+								</script><table width="100%" border="0" cellspacing="0" cellpadding="0"><tbody><tr><td><div class="page-breadcrumbs"><span class="smalltext"><img border="0" src="/kernel/images/speck.gif" class="nospace" width="8" height="15"><a href="/" class="breadcrumbnav">Home</a><span class="breadcrumb-separator">&nbsp;»&nbsp;</span><b>Privacy Policy</b></span></div></td></tr></tbody></table>
 <br><div class="bodytext"><h3>Privacy Policy</h3>
 <ul>
 <li><a class="default" href="content.xml?cid=privacy#collect">The Information We Collect</a></li>
@@ -391,10 +387,10 @@ if (bV >= 4 && !opera) {
 <a href="/myaccount/index.xml?login=1" class="nav">Login</a><br><a href="/myaccount/forgotten_password.html" class="nav">Retrieve Password</a><br><a href="/myaccount/signup.xml" class="nav">Edit Profile</a><br><a href="/myaccount/shipping_addresses.xml" class="nav">Address Book</a><br><a href="/myaccount/billing_addresses.xml" class="nav">Payment Choice</a><br><a href="/myaccount/orders.xml" class="nav">Track Your Order</a><br><a href="/myaccount/calendar.html" class="nav">Calendar</a><br><a href="/myaccount/index.xml?logout=1" class="nav">Logout</a>
 </td>
 <td valign="top" class="page-footer" width="34%">
-<a href="#" onclick="MM_openBrWindow('/content_popup.xml?cid=shipping','date','width=316,height=300,left=10,top=10,scrollbars=yes,resizable=yes');return false;">Shipping &amp; Tax Information</a><br><a href="/content.xml?cid=mailorder">Mail Orders</a><br><a href="/content.xml?cid=returns_exchanges">Returns &amp; Exchanges</a><br><a href="/content.xml?cid=faqs">FAQ</a><br><a href="/contactus.xml">Contact Us</a><br><a href="/content.xml?cid=howtoorder">How to Order</a><br><a href="/content.xml?cid=catalog_selection">Catalog &amp; Selection</a><br><a href="/content.xml?cid=affiliate">Affiliate Program</a><br><a href="#" onclick="MM_openBrWindow('/content_popup.xml?cid=volumediscounts','date','width=300,height=300,left=10,top=10,scrollbars=no,resizable=no');return false;">Volume Discounts</a><br><a href="#" onclick="MM_openBrWindow('/content_popup.xml?cid=studio_store','date','width=300,height=300,left=10,top=10,scrollbars=no,resizable=no');return false;">Studio Store Information</a><br><a href="http://img.email.wbshop.com/esforms/wbshop/wb.aspx" target="_blank" class="nav">Newsletter Sign Up</a><br>
+<a href="#" onclick="MM_openBrWindow('/content_popup.xml?cid=shipping','date','width=316,height=300,left=10,top=10,scrollbars=yes,resizable=yes');return false;">Shipping &amp; Tax Information</a><br><a href="/content.xml?cid=mailorder">Mail Orders</a><br><a href="/content.xml?cid=returns_exchanges">Returns &amp; Exchanges</a><br><a href="/content.xml?cid=faqs">FAQ</a><br><a href="/contactus.xml">Contact Us</a><br><a href="/content.xml?cid=howtoorder">How to Order</a><br><a href="/content.xml?cid=catalog_selection">Catalog &amp; Selection</a><br><a href="/content.xml?cid=affiliate">Affiliate Program</a><br><a href="#" onclick="MM_openBrWindow('/content_popup.xml?cid=volumediscounts','date','width=300,height=300,left=10,top=10,scrollbars=no,resizable=no');return false;">Volume Discounts</a><br><a href="#" onclick="MM_openBrWindow('/content_popup.xml?cid=studio_store','date','width=300,height=300,left=10,top=10,scrollbars=no,resizable=no');return false;">Studio Store Information</a><br><a href="http://img.email.wbshop.com/esforms/wbshop/wb.aspx" target="_blank" class="nav">Newsletter Sign Up</a><br><a href="http://search.wbshop.com/PopularSearches/PopularSearches_A.html">Popular Searches</a>
 </td>
 <td valign="top" class="page-footer" width="33%">
-<a href="/content.xml?cid=privacy">Privacy</a><br><a href="/content.xml?cid=security">Security</a><br><a href="/content.xml?cid=terms">Terms &amp; Conditions</a><br><br><a href="http://www.bizrate.com/ratings_guide/cust_reviews__mid--101076.html" target="bizrate.com"><img src="http://medals.bizrate.com/medals/dynamic/101076_medal.gif" alt="BizRate Customer Certified (GOLD) Site" width="125" height="73" align="top" border="0" target="_blank"></a>
+<a href="/content.xml?cid=privacy">Privacy</a><br><a href="/content.xml?cid=security">Security</a><br><a href="/content.xml?cid=terms">Terms &amp; Conditions</a><br><br><a href="http://www.bizrate.com/ratings_guide/cust_reviews__mid--101076.html" target="bizrate.com"><img src="https://medals.bizrate.com/medals/dynamic/101076_medal.gif" alt="BizRate Customer Certified (GOLD) Site" width="125" height="73" align="top" border="0" target="_blank"></a>
 </td>
 </tr>
 <tr>
@@ -414,7 +410,7 @@ if (bV >= 4 && !opera) {
 <table class="page-footer" cellspacing="0" cellpadding="10" width="770" align="center" border="0"><tbody><tr>
 <td width="20%" align="left"><a href="http://www.novator.com"><img src="/kernel/images/wbshop/logo-novator.gif" border="0" alt="Powered by Novator" width="84" height="42"></a></td>
 <td width="60%" class="page-fineprint">~ HARRY POTTER Publishing Rights © J.K. Rowling, LOONEY TUNES, THE MATRIX, WB SHIELD: ™ &amp; © Warner Bros. &amp; © Cartoon Network. BATMAN, SUPERMAN and all related characters: ™ &amp; © DC Comics. SCOOBY-DOO: ™ &amp; © Hanna-Barbera. THE WIZARD OF OZ: ™ &amp; © Turner Entertainment Co. (2007) ~</td>
-<td width="20%" align="center"><a href="javascript:OpenCertDetails()"><img src="/kernel/images/thawte.gif" border="0" alt="Click here for more details" width="68" height="60"></a></td>
+<td width="20%" align="center"><script src="https://siteseal.thawte.com/cgi/server/thawte_seal_generator.exe"></script></td>
 </tr></tbody></table>
 <script language="javascript">
                 
