--- a/r/re/ren/rentboard.ca.html
+++ b/r/re/ren/rentboard.ca.html
@@ -1,13 +1,13 @@
-<!--The following is the downloaded HTML source of the rentboard.ca privacy policy that was archived on 2007-06-29.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070629130533id_/http%3A//www.rentboard.ca/company/privacy_policy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rentboard.ca privacy policy that was archived on 2007-12-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071229235801id_/http%3A//www.rentboard.ca/company/privacy_policy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8">
-<title>Privacy Policy - RentBoard.ca</title>
-<meta name="description" content="Canada apartments for rent. Homes and apartments in Canada for rent. Renters search all Canada rental properties including apartments, homes, townhouses, condos, shared accomodation and more all for FREE at RentBoard.ca. Listings for Canada apartments and homes for rent.">
-<meta name="keywords" content="Canada apartment,apartments for rent,houses,suites,rental properties,condos,townhouses,Canada apartments,RentBoard,Rent,Apartments,Canada apartments,Canada rentals,Canada rent,Canadian apartments,Homes for rent,Canada homes,Canadian homes,For rent,Renting,Rentals,Accommodations,Property management,condos,Towers,Canada accommodations,Rental home,Canadian renting,Canadian apartment rentals,Canada Condos,Canadian Condos,Properties,Property for rent,Condos for rent,Houses for rent,Suites for rent,Online rentals,Online rental advertising,Online houses,Rental listings,Listings for rent,Canada rental listings,Canadian rental listings,Real estate,Real estate rentals,Canada real estate,Canada real estate rentals,Real estate brokerages,For lease,Temporary accommodations,Temporary accommodation,Canada online classifieds,Basement suites,Shared accommodations">
+<title>Privacy Policy</title>
+<meta name="description" content="Find apartments and houses for rent in Canada. View maps of Canada apartment and house rentals on the Rent Board of Canada.">
+<meta name="keywords" content="Canada, Canada houses for rent, Canada apartments, Canada apartment rentals, Canada apartments for rent, Canada rental listings">
 <meta http-equiv="content-style-type" content="text/css">
-<meta name="verify-v1" content="cbw7yNlpBLw7n6u0Ma6cUjrgMiiPaERU3beqjHUWB/0="> 
+<meta name="verify-v1" content="5G64gZ5dZpuBjTNwimPSteTtNT6MjHjKQ4Bzm3UOn50="> 
 <link rel="meta" href="http://www.rentboard.ca/labels.xml" type="application/rdf+xml" title="ICRA labels">
 <link rel="Stylesheet" type="text/css" href="/inc/style.css">
 
@@ -17,47 +17,36 @@
 <body bgcolor="#FFFFFF" text="#000000" link="#0000EE" alink="#FF0000" vlink="#0000EE">
 
 
-<table border="0" cellpadding="0" cellspacing="0" width="100%">
+<table width="100%" class="nav_tbl1" border="0" cellpadding="0" cellspacing="0">
 <tbody><tr><td width="2%">&nbsp;</td>
-<td width="20%" align="left" valign="bottom"><a id="page_top_lnk_logo" href="http://www.rentboard.ca/index.aspx" target="_top"><img alt="RentBoard.ca - Canada apartments, houses and condos for rent" border="0" height="50" width="120" src="/images/rentboard_logo_120x50.gif"></a></td>
-<td width="5%">&nbsp;</td>
-<td width="58%" valign="bottom" align="left">
-<table height="34" cellspacing="0" cellpadding="0" border="0">
+<td width="20%" align="left" valign="bottom"><a id="page_top_lnk_logo" href="http://www.rentboard.ca/index.aspx" target="_top"><img alt="RentBoard.ca - Canada apartments, houses and condos for rent" border="0" height="50" width="120" src="/images/rentboard_logo_120x50_t.gif"></a></td>
+<td width="56%" valign="bottom" align="left">
+<table width="100%" border="0" cellpadding="4" cellspacing="0">
 <tbody><tr>
-<td align="center">&nbsp;</td>
-<td id="page_top_tab_search" class="top_tabs_1" background="/images/tab_blue2.jpg" width="115" height="34" bgcolor="#3F89C3" align="center" valign="middle">
-<a id="page_top_lnk_search" href="http://www.rentboard.ca/rentals/index.aspx" target="_top">Search</a>
-</td>
-
-<td id="page_top_tab_renters" class="top_tabs_1" background="/images/tab_blue2.jpg" width="115" height="34" bgcolor="#3F89C3" align="center" valign="middle">
-<a id="page_top_lnk_renters" href="http://www.rentboard.ca/renter/index.aspx" target="_top">Renters</a>
-</td>
-
-<td id="page_top_tab_managers" class="top_tabs_1" background="/images/tab_blue2.jpg" width="115" height="34" bgcolor="#3F89C3" align="center" valign="middle">
-<a id="page_top_lnk_managers" href="http://www.rentboard.ca/manager/index.aspx" target="_top">Managers</a>
-</td>
-
+<td width="33%" align="center" valign="bottom" class="nav_tab1"><a href="http://www.rentboard.ca/rentals/index.aspx" target="_top">Search For Rentals</a></td>
+<td width="1%">&nbsp;</td>
+<td width="33%" align="center" valign="bottom" class="nav_tab1"><a href="http://www.rentboard.ca/renter/index.aspx" target="_top">For Renters</a></td>
+<td width="1%">&nbsp;</td>
+<td width="32%" align="center" valign="bottom" class="nav_tab1"><a href="http://www.rentboard.ca/manager/index.aspx" target="_top">Managers / Landlords</a></td>
 </tr>
 </tbody></table>
 </td>
-<td width="15%" align="center" valign="middle">
-&nbsp;
+<td width="2%">&nbsp;</td>
+<td width="20%" valign="middle" align="right">
+<a href="/company/privacy_policy_fr-CA.aspx" target="_top">Français</a>
+&nbsp;&nbsp;
 </td>
 </tr>
+<tr><td colspan="5" width="100%" class="nav_line1"></td></tr>
 </tbody></table>
-<table border="0" cellpadding="2" cellspacing="0" width="100%"><tbody><tr>
-<td id="page_top_tab_links" class="top_bar_1" width="100%" bgcolor="#DD1212" align="right" valign="middle"><a href="http://www.rentboard.ca/manager/index.aspx">Post your vacancy on the RentBoard</a>&nbsp;&nbsp;</td>
-
-</tr></tbody></table>
 
 
-<table width="100%" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td bgcolor="#FFFFFF"><img src="/images/spacer1.gif" width="1" height="1" alt=""></td></tr></tbody></table>
-<table width="100%" border="0" cellpadding="2" cellspacing="0" class="nav_bar_style_1"><tbody><tr>
-<td width="1%" align="right" valign="top" class="nav_bar_style_1">&nbsp;<img src="/images/arrow_red1.gif" alt="*" height="10" width="6">&nbsp;</td>
-<td width="99%" class="nav_bar_style_1" align="left" valign="middle">
+<table width="100%" border="0" cellpadding="2" cellspacing="0" class="nav_bar_1"><tbody><tr>
+<td width="1%" align="left" valign="middle" class="nav_bar_1">
+&nbsp;<img src="/images/arrow_red1.gif" alt="*" height="10" width="6">&nbsp;
 <span class="nav_links_1"><a href="/index.aspx">Home</a> &gt; Privacy Policy</span>
 </td></tr></tbody></table>
-<table width="100%" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td bgcolor="#3366CC"><img src="/images/spacer1.gif" width="1" height="1" alt=""></td></tr></tbody></table>
+<div align="center"><img src="/images/christmas_lights_1.gif" alt="Happy Holidays" height="13" width="564" border="0"></div>
 <blockquote>
 <table border="0" cellpadding="2" cellspacing="1" width="90%">
 <tbody><tr>
@@ -83,12 +72,6 @@
 <td width="2%" align="right" valign="middle"><img src="/images/arrow_red1.gif" alt="*" height="10" width="6"></td>
 <td width="98%" align="left" valign="top">
 <a href="/company/ad_rates.aspx">Ad Rates</a>
-</td>
-</tr>
-<tr>
-<td width="2%" align="right" valign="middle"><img src="/images/arrow_red1.gif" alt="*" height="10" width="6"></td>
-<td width="98%" align="left" valign="top">
-<a href="/company/photonet.aspx">Photographer Network</a>
 </td>
 </tr>
 <tr>
@@ -191,11 +174,11 @@ If you have questions or concerns regarding this statement, please contact us at
 
 
 <table width="100%" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td bgcolor="#3366CC"><img src="/images/spacer1.gif" width="1" height="1" alt=""></td></tr></tbody></table>
-<table width="100%" border="0" cellpadding="2" cellspacing="0" class="nav_bar_style_1"><tbody><tr>
-<td width="15%" align="left" valign="top" class="nav_bar_style_1">
-<span class="footer_text_1">29-Jun-2007</span>
+<table width="100%" border="0" cellpadding="2" cellspacing="0" class="nav_bar_1"><tbody><tr>
+<td width="15%" align="left" valign="top" class="nav_bar_1">
+<span class="footer_text_1">29-Dec-2007</span>
 </td>
-<td width="65%" align="center" valign="top" class="nav_bar_style_1">
+<td width="65%" align="center" valign="top" class="nav_bar_1">
 <span class="footer_text_1">
 <a id="_ctl2_lnk_about" href="http://www.rentboard.ca/company/index.aspx" target="_top">About RentBoard.ca</a> | 
 <a id="_ctl2_lnk_privacy" href="http://www.rentboard.ca/company/privacy_policy.aspx" target="_top">Privacy</a> | 
@@ -203,10 +186,16 @@ If you have questions or concerns regarding this statement, please contact us at
 <a id="_ctl2_lnk_language" href="http://www.rentboard.ca/user/set_culture.aspx" target="_top">Choose Language</a>
 </span>
 </td>
-<td width="20%" align="right" valign="top" class="nav_bar_style_1">
+<td width="20%" align="right" valign="top" class="nav_bar_1">
 <span class="footer_text_1">© 2007 <a id="_ctl2_lnk_home" href="http://www.rentboard.ca/index.aspx" target="_top">RentBoard.ca</a></span>
 </td>
 </tr></tbody></table>
+<script src="https://ssl.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-2299051-1";
+urchinTracker();
+</script>
 
 
 
