--- a/s/so/sof/softplatz.com.html
+++ b/s/so/sof/softplatz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the softplatz.com privacy policy that was archived on 2007-06-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070616142550id_/http%3A//www.softplatz.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the softplatz.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230014831id_/http%3A//www.softplatz.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
   	<meta http-equiv="Content-type" content="text/html; charset=utf-8">
@@ -270,29 +270,30 @@
         <span id="intelliTXT">
     
         <div class="user_review">
-          <div class="title"><a href="/Soft/Audio-Multimedia/Video-Tools/ConVID-Live-Alpha.html"><b>ConVID Live Alpha</b> 1.0</a></div>
+          <div class="title"><a href="/Soft/Business/Calculators-Converters/123PDFConverter-PDF-Conversion-Software.html"><b>123PDFConverter: PDF Conversion Software</b> 3.0</a></div>
+          <div class="rating"><img src="/images/rating-small-5.gif" width="69" height="8" hspace="0" vspace="0" border="0" align="absmiddle" alt="5 / 5"></div>
+          <div class="text">The software thoroughly meets our needs. I have make PDF files that looks absolutely fabulous.  Without a doubt it will help in good conversion work. It is the best program we’ve ever had.</div>
+        </div>
+        <div class="user_review">
+          <div class="title"><a href="/Soft/Audio-Multimedia/Audio-File-Players/Winter-Fun-Pack-for-Windows-Media-Player.html"><b>Winter Fun Pack for Windows Media Player</b> 9 Series 1.0</a></div>
           <div class="rating"><img src="/images/rating-small-2.gif" width="69" height="8" hspace="0" vspace="0" border="0" align="absmiddle" alt="2 / 5"></div>
-          <div class="text">It was a good program, it should be for free though, or have a trial period on it, just don't blur the output. Or even make it free.</div>
+          <div class="text">I can't uninstall this program. I have stopped it from loading in the start up by removing it from the start up when you click start, all programs and start up but the darn thing still messes up ot...</div>
         </div>
         <div class="user_review">
-          <div class="title"><a href="/Soft/Security-Privacy/Anti-Spam-Anti-Spy/Anti-keylogger.html"><b>Anti-keylogger</b> 7.4.1</a></div>
+          <div class="title"><a href="/Soft/Audio-Multimedia/Video-Tools/MagicDisc-Virtual-DVD-CD-ROM.html"><b>MagicDisc Virtual DVD/CD-ROM</b> 2.5.74</a></div>
           <div class="rating"><img src="/images/rating-small-5.gif" width="69" height="8" hspace="0" vspace="0" border="0" align="absmiddle" alt="5 / 5"></div>
-          <div class="text">I am a professional programmer and I tested different kinds of security applications and the best result was around 12 percent, but this soft is unique because it doesn't use signature bases, but t...</div>
+          <div class="text">Honenestly I love you. This program is free and the best out there. I too have tried several other programs and i dont know much about computers but i just went to the how to and there was my solut...</div>
         </div>
         <div class="user_review">
-          <div class="title"><a href="/Soft/Education/Training-Tools/220-601-CompTIA-A-Essentials.html"><b>220-601 CompTIA A+ Essentials</b> 8.02.05</a></div>
-          <div class="rating"><img src="/images/rating-small-4.gif" width="69" height="8" hspace="0" vspace="0" border="0" align="absmiddle" alt="4 / 5"></div>
-          <div class="text">it's good i love the questions and thats not all its easy to pass because it is contain questions that will be comming for ther wxam</div>
-        </div>
-        <div class="user_review">
-          <div class="title"><a href="/Soft/Utilities/File-Compression/Free-PDF-Compressor.html"><b>Free PDF Compressor</b> 1.12</a></div>
-          <div class="rating"><img src="/images/rating-small-1.gif" width="69" height="8" hspace="0" vspace="0" border="0" align="absmiddle" alt="1 / 5"></div>
-          <div class="text">I downloaded this &amp; tried to use it, it just gave me  an IVALID FIELD error every time i tried loading tyhe document into it, very disapointed.</div>
-        </div>
-        <div class="user_review">
-          <div class="title"><a href="/Soft/Education/Dictionaries/Pelagian-Dictionary.html"><b>Pelagian Dictionary</b> 2.7</a></div>
+          <div class="title"><a href="/Soft/Network-Internet/Download-Managers/Free-Download-Manager.html"><b>Free Download Manager</b> 2.5</a></div>
           <div class="rating"><img src="/images/rating-small-5.gif" width="69" height="8" hspace="0" vspace="0" border="0" align="absmiddle" alt="5 / 5"></div>
-          <div class="text">I am using it from last 2 years, and really it is very usful and It has highest translated word meaning into both of language, Thanks Pelagian, Keep it up!</div>
+          <div class="text">It is very usefull.it helped me lot in my studies .Quick access to it and very pleasure to have it.
+                                  thank you</div>
+        </div>
+        <div class="user_review">
+          <div class="title"><a href="/Soft/Network-Internet/Browsers-Tools/Robust-FREE-Internet-Speed-Booster.html"><b>Robust FREE Internet Speed Booster</b> 3.0</a></div>
+          <div class="rating"><img src="/images/rating-small-5.gif" width="69" height="8" hspace="0" vspace="0" border="0" align="absmiddle" alt="5 / 5"></div>
+          <div class="text">i am really not believing that i have got such a program freee.this is really funtasting and amusing...i wanna tell everyone to download this..</div>
         </div>
 
         </span>
