--- a/b/bl/blo/blo.gs.html
+++ b/b/bl/blo/blo.gs.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the blo.gs privacy policy that was archived on 2007-06-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070625030319id_/http%3A//blo.gs/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the blo.gs privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230020514id_/http%3A//blo.gs/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/x
 html1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
@@ -118,5 +118,5 @@ such changes on our <a href="news.php">news page</a>.</p>
 </div>
 
 
-<!-- blastws2.my.scd.yahoo.net uncompressed Sun Jun 24 20:03:19 PDT 2007 -->
+<!-- blastws2.my.scd.yahoo.net uncompressed Sat Dec 29 18:05:14 PST 2007 -->
 </body></html>
