--- a/l/la/las/laserdesign.com.html
+++ b/l/la/las/laserdesign.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the laserdesign.com privacy policy that was archived on 2007-04-20.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070420202131id_/http%3A//www.laserdesign.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the laserdesign.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230020614id_/http%3A//www.laserdesign.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Language" content="en-us">
@@ -39,6 +39,14 @@
 </tbody></table><font color="#FFFFFF" face="Verdana" size="2">
 </font>
 <p align="center">&nbsp;</p>
+<p>&nbsp;
+<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
+</script>
+<script type="text/javascript">
+_uacct = "UA-1648490-1";
+urchinTracker();
+</script>
+</p>
 
 </td></tr><!--msnavigation--></tbody></table><!--msnavigation--><table dir="ltr" border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><td valign="top" width="1%">
 
@@ -93,9 +101,14 @@
 		</tr>
 		<tr>
 			<td width="338" bgcolor="#9F0000" height="158" align="left" rowspan="2">
-			<p style="margin-left: 5">
-			<a href="http://www.sme.org/cgi-bin/new-evget-booth.pl?&amp;&amp;&amp;001677&amp;&amp;RP07-79319&amp;ETK" target="new">
-			<img src="http://www.sme.org/gmn/data/docs/menu/001677.jpg" border="0" width="108" height="97"></a></p></td>
+			<p style="margin-left: 5">&nbsp;</p>
+			<p style="margin-left: 5">&nbsp;</p>
+			<p style="margin-left: 5">&nbsp;</p>
+			<p style="margin-left: 5">&nbsp;</p>
+			<p style="margin-left: 5">&nbsp;</p>
+			<p style="margin-left: 5">&nbsp;</p>
+			<p style="margin-left: 5">&nbsp;</p>
+			<p style="margin-left: 5">&nbsp;</p></td>
 			<td width="37" height="99" align="left" valign="bottom"></td>
 		</tr>
 		<tr>
@@ -103,11 +116,11 @@
 			</td>
 		</tr>
 		<tr>
-			<td width="338" bgcolor="#9F0000" height="70" align="center" valign="bottom">
+			<td width="338" bgcolor="#9F0000" height="70" align="center" valign="bottom">&nbsp;<p>
 			<font face="Arial" size="1" color="#FFFFFF">
 			<a href="privacy.htm"><font color="#FFFFFF">Privacy</font></a> /
 			<a href="trademark.htm"><font color="#FFFFFF">Legal </font></a>
-			</font>
+			</font></p>
 			<p align="left"><font face="Arial" color="#FFFFFF" size="1">© 2007 
 			Laser Design Inc</font></p></td>
 		</tr>
@@ -136,11 +149,9 @@
     material on our products.<br>
     <br>
     Your contact information can also be used to send you follow-up 
-    communications in your area of interest. Any mailing lists derived from 
-    contact information will not be shared with anyone outside the authorized 
-    Laser Design, Inc. organization. After the initial requested information 
+    communications in your area of interest.&nbsp; After the initial requested information 
     sharing between you and Laser Design, Inc., further qualification can 
-    determine if more communication will be beneficial. You will not be able 
+    determine if more and/or 3rd party communication will be beneficial. You will not be able 
     from the website itself to opt-out of receiving future information.<br>
     <br>
     This site contains links to other sites. Laser Design, inc. is not 
