--- a/s/st/stu/stuffedpetite.com.html
+++ b/s/st/stu/stuffedpetite.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the stuffedpetite.com privacy policy that was archived on 2007-05-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070513185534id_/http%3A//stuffedpetite.com/MCE/default/1/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the stuffedpetite.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230021029id_/http%3A//stuffedpetite.com/MCE/default/1/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Stuffed Petite Public :: Privacy Page</title>
@@ -35,7 +35,7 @@ var exit=false;
 			</tr>
 			<tr>
 				<td background="/themes/default/images/tour_05.gif" align="center">
-					<a href="/MCE/default/1/home" onclick="exit=false"><img src="/themes/default/images/main.gif" width="189" height="41" border="0"></a><a href="/MCE/default/1/pitch" onclick="exit=false"><img src="/themes/default/images/sites.gif" width="170" height="41" border="0"></a><a href="http://members.stuffedpetite.com" onclick="exit=false"><img src="/themes/default/images/members.gif" width="217" height="41" border="0"></a><a href="/MCE/default/1/join" onclick="exit=false"><img src="/themes/default/images/join.gif" width="177" height="41" border="0"></a>
+					<a href="/MCE/default/1/home" onclick="exit=false"><img src="/themes/default/images/main.gif" width="189" height="41" border="0"></a><a href="/MCE/default/1/pitch" onclick="exit=false"><img src="/themes/default/images/sites.gif" width="170" height="41" border="0"></a><a href="http://members.stuffedpetite.com" onclick="exit=false"><img src="/themes/default/images/members.gif" width="217" height="41" border="0"></a><a href="http://www.blazingbucks.com/wm/signup/signup.php?site=20" onclick="exit=false"><img src="/themes/default/images/join.gif" width="177" height="41" border="0"></a>
 				</td>
 			</tr>
 		</tbody></table>
