brinkster.com (archived on 2007-12-30)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;informationtech",
  "char_count": 3150,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 10.14,
  "homepage_snapshot_redirected_domain": "brinkster.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071001014229id_/http://www.brinkster.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071001014229id_/http%3A//brinkster.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "brinkster.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071230045937id_/http%3A//www.brinkster.com/AboutUs/PrivacyStatement7-13-04.aspx",
  "policy_title": "Web Hosting, Free Web Site Builder & Domain Name, Web Hosting Made Easy By Brinkster",
  "policy_url": "brinkster.com/AboutUs/PrivacyStatement7-13-04.aspx",
  "sha1": "dcb8342aab171db2f92e9c6c67e2f21c2e55b4f7",
  "simhash": 16615974009738370458,
  "simhash_updated": false,
  "site_hostname": "brinkster.com",
  "site_url": "http://brinkster.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20071230045937",
  "word_count": 517,
  "year": 2007
}

--- a/b/br/bri/brinkster.com.html
+++ b/b/br/bri/brinkster.com.html
@@ -1,8 +1,10 @@
-<!--The following is the downloaded HTML source of the brinkster.com privacy policy that was archived on 2007-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070606085637id_/http%3A//www.brinkster.com/AboutUs/PrivacyStatement7-13-04.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the brinkster.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230045937id_/http%3A//www.brinkster.com/AboutUs/PrivacyStatement7-13-04.aspx) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>	
-<title>Web Hosting, Free Web Site Builder &amp; Domain Name, Web Hosting Made Easy By Brinkster</title>
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
+
+<title>Web Hosting, Free Web Site Builder &amp; Domain Name, Web Hosting Made 
+Easy By Brinkster</title>
 <link rel="shortcut icon" href="http://www.brinkster.com/images/favicon.ico">
 <meta name="description" content="Web Hosting, Domain Names, FREE Website Builder, FREE Domain Name with Web Hosting, FREE Code Bank, 90 Day Money Back Guarantee.">
 <meta name="keywords" content="Web Hosting, Domain Names, FREE Website Builder, FREE Domain Name with Web Hosting, FREE Code Bank, 90 Day Money Back Guarantee.">
@@ -32,7 +34,6 @@ function MM_swapImage() { //v3.0
   var i,j=0,x,a=MM_swapImage.arguments; document.MM_sr=new Array; for(i=0;i<(a.length-2);i+=3)
    if ((x=MM_findObj(a[i]))!=null){document.MM_sr[j++]=x; if(!x.oSrc) x.oSrc=x.src; x.src=a[i+2];}
 }
-
 
 	function ShowDiv(DivName)
 	{
@@ -78,25 +79,31 @@ function MM_openBrWindow(theURL,winName,features) { //v2.0
 //-->
 </script>
 <script type="text/javascript" src="http://www.brinkster.com/livechat/skypeCheck.js"></script>
+<link href="http://www.brinkster.com/packagesstyle.css" rel="stylesheet" type="text/css">
+<link href="http://www.brinkster.com/brinkster.css" rel="stylesheet" type="text/css">
 
 <style type="text/css">
 body {
-  background-color:#f2f4f4;
+  background-color:#ffffff;
 }
+td {
+   font-family:Arial, Helvetica, sans-serif;
+  font-size:12px;
+  color:#666666;
+
+  font-size:12px
+}
+.MoreFeatures2 {
+	font-size:12px;}
 </style>
-
-<link href="http://www.brinkster.com/packagesstyle.css" rel="stylesheet" type="text/css">
-
-<link href="http://www.brinkster.com/brinkster.css" rel="stylesheet" type="text/css">
 
 </head>
 <body marginheight="0" marginwidth="0" topmargin="0" leftmargin="0" bottommargin="0" onload="MM_preloadImages('http://www.brinkster.com/images/header/btn_home_ro.gif','http://www.brinkster.com/images/header/btn_hosting_ro.gif','http://www.brinkster.com/images/header/btn_server_ro.gif','http://www.brinkster.com/images/header/btn_partner_ro.gif','http://www.brinkster.com/images/header/btn_support_ro.gif','http://www.brinkster.com/images/header/btn_webmail_login_ro.gif','http://www.brinkster.com/images/header/btn_customer_login_ro.gif','http://www.brinkster.com/images/header/btn_domains_ro.gif')">
-
 <div align="center">
 
-<div style="height:76px;">
-<!-- /// BEGIN: TopNav \\\ -->
-
+	<div style="height:76px;">
+	<!-- /// BEGIN: TopNav \\\ -->
+	
 <!-- Top Control Begin -->
 
 
@@ -621,119 +628,106 @@ function MM_swapImage() { //v3.0
 <!-- Top Control End -->
 
 
-<!-- /// END: TopNav \\\ -->
-</div>
+	<!-- /// END: TopNav \\\ -->
+	</div>
 
-<div style="padding-top:2px; background-image:url(http://www.brinkster.com/images/professional/newprofessional/whitegradient.jpg); background-repeat:repeat-x; height:868px;">
+	<div style="height:15px;"></div>
 
-<div style="height:15px;"></div>
+	<div style="background-image:url(http://www.brinkster.com/images/aboutus/aboutheader.gif); background-repeat:no-repeat; height:32px; width:950px; margin-top:10px;"></div>
+	
+	<div style="background-image:url(http://www.brinkster.com/images/aboutus/aboutbodybg.gif); background-repeat:repeat-y; width:950px; font-family:Arial, Helvetica, sans-serif;">
 
-<div style="background-image:url(http://www.brinkster.com/images/professional/newprofessional/pkg_bg2.jpg); background-repeat:repeat-y; width:832px;">
-<div style="background-image:url(http://www.brinkster.com/images/professional/newprofessional/pkg_bg1.gif); background-repeat:no-repeat; width:832px;">
-<div style="background-image:url(http://www.brinkster.com/images/aboutus/aboutusheader.gif); background-repeat:no-repeat; height:76px; width:738px; padding-bottom:15px;"></div>
+		<table border="0" width="950" cellpadding="0" cellspacing="0">
+		<tbody><tr>
+			<td width="700" valign="top">
+			<div style="padding:31px 11px 11px 11px;">
+			<span style="color:#22a4ff; font-size:18px;"><b>PRIVACY POLICY</b></span>
+			<p>
+			<font color="#333333">
+</font></p><p><font color="#333333">Effective Date of July 9th, 2004
 
-<table width="772" border="0" cellspacing="0" cellpadding="0">
-  <tbody><tr>
-    <td width="17">&nbsp;</td>
-    <td width="537"><table width="537" border="0" cellspacing="0" cellpadding="0">
-  	<tbody><tr>
-      <td height="3"></td>
-  	</tr>
-  	<tr>
-      <td class="PressRelease">
-                    <p><font class="blue_title"><b>PRIVACY POLICY</b></font> <br>
-                    <br>
-                    <font class="body"> Effective Date of July 9th, 2004<br>
-                    <br>
-                    Brinkster has created this privacy statement in order to demonstrate 
-                    our firm commitment to privacy. The following discloses our 
-                    information gathering and dissemination practices for this 
-                    website: Brinkster.<br>
-                    <br>
-                    We use your IP address to help diagnose problems with our 
-                    server, and to administer our Web site. Your IP address is 
-                    used to help identify you and your shopping cart and to gather 
-                    broad demographic information.<br>
-                    <br>
-                    Our site uses cookies to keep track of your shopping cart 
-                    and to make sure you don't see the same ad repeatedly. We 
-                    use cookies to deliver content specific to your interests, 
-                    to save your password so you don't have to re-enter it each 
-                    time you visit our site, and for other purposes.<br>
-                    <br>
-                    Our site's registration form requires users to give us contact 
-                    information (like their name and email address), financial 
-                    information (like their account or credit card numbers), and 
-                    demographic information (like their zip code, age, or income 
-                    level). We use customer contact information from the registration 
-                    form to send the user information about our company and promotional 
-                    material from some of our partners. The customer's contact 
-                    information is also used to contact the visitor when necessary. 
-                    Financial information that is collected is used to bill the 
-                    user for products and services. Demographic and profile data 
-                    is also collected at our site. This information is shared 
-                    with advertisers on an aggregate basis.<br>
-                    <br>
-                    This site contains links to other sites. Brinkster is not 
-                    responsible for the privacy practices or the content of such 
-                    Web sites.<br>
-                    <br>
-                    We may use an outside ad company to display ads on our site. 
-                    These ads may contain cookies. While we use cookies in other 
-                    parts of our Web site, cookies received with banner ads are 
-                    or may be collected by our ad company, and we do not have 
-                    access to this information. Some customer data is shared with 
-                    the advertising companies.<br>
-                    <br>
-                    <b>Public Forums</b><br>
-                    This site makes chat rooms, forums, message boards, and/or 
-                    news groups available to its users. Please remember that any 
-                    information that is disclosed in these areas becomes public 
-                    information and you should exercise caution when deciding 
-                    to disclose your personal information.<br>
-                    <br>
-                    <b>Security</b><br>
-                    This site has security measures in place to protect the loss, 
-                    misuse and alteration of the information under our control.</font></p>
-                  <p class="body"><strong>Updating your information</strong><br>
-                    We provide mechanisms for updating and correcting 
-                    your personally identifying information for many of our services. 
-                    For more information, please see the help pages for each service.</p>
-                  <p class="body"><strong>Changes to this Policy<br>
-                    </strong><span class="body">Please note this Privacy Policy 
-                    will change from time to time. We expect most such changes 
-                    to be minor, but there may be changes that are more significant, 
-                    we will also provide a more prominent notice. Each version 
-                    will be noted at the top of the page. Prior versions of this 
-                    Privacy Policy will be kept in an archive for you to view.<font class="body"></font></span><font class="body"><br>
-                    <br>
-                    <b>Contacting the Web Site</b><br>
-                    If you have any questions about this privacy statement, the 
-                    practices of this site, or your dealings with this Web site, 
-                    you can contact <a href="mailto:info@brinkster.com">info@brinkster.com</a>.<br>
-                    <br>
-                    <br>
-                    <br>
-                    </font> </p></td>
-  	</tr>
-  	<tr>
-      <td height="3"></td>
-  	</tr>
-	</tbody></table></td>
-    <td width="201" valign="top"><a href="http://www.brinkster.com/AboutUs/AboutUs.aspx"><img src="http://www.brinkster.com/images/aboutus/helpsuite/aboutus.gif" border="0" alt="About Us"></a><br>
-	<a href="http://www.brinkster.com/AboutUs/WhyBrinkster.aspx"><img src="http://www.brinkster.com/images/aboutus/helpsuite/whybrinkster.gif" border="0" alt="Why Brinkster?"></a><br>
-	<a href="http://www.brinkster.com/Server/DataCenter.aspx"><img src="http://www.brinkster.com/images/aboutus/helpsuite/data_center.gif" border="0" alt="Data Center"></a><br>
-	<a href="http://www.brinkster.com/AboutUs/PressRoom.aspx"><img src="http://www.brinkster.com/images/aboutus/helpsuite/press_room.gif" border="0" alt="Press Room"></a><br>
-	<a href="http://www.brinkster.com/AboutUs/Legal.aspx"><img src="http://www.brinkster.com/images/aboutus/helpsuite/legal.gif" border="0" alt="Legal"></a></td>
-    <td width="17">&nbsp;</td>
-  </tr>
-</tbody></table></div>
+</font></p><p><font color="#333333">Brinkster has created this privacy statement in order to demonstrate our firm commitment to privacy. The following discloses our information gathering and dissemination practices for this website: Brinkster.
 
-</div>
+</font></p><p><font color="#333333">We use your IP address to help diagnose problems with our server, and to administer our Web site. Your IP address is used to help identify you and your shopping cart and to gather broad demographic information.
 
-<div style="background-image:url(http://www.brinkster.com/images/professional/newprofessional/pkg_footerbg.jpg); background-repeat:no-repeat; height:55; width:832px;"></div>
+</font></p><p><font color="#333333">Our site uses cookies to keep track of your shopping cart and to make sure you don't see the same ad repeatedly. We use cookies to deliver content specific to your interests, to save your password so you don't have to re-enter it each time you visit our site, and for other purposes.
 
-<!-- /// BEGIN: Bottom Nav \\\ -->
+</font></p><p><font color="#333333">Our site's registration form requires users to give us contact information (like their name and email address), financial information (like their account or credit card numbers), and demographic information (like their zip code, age, or income level). We use customer contact information from the registration form to send the user information about our company and promotional material from some of our partners. The customer's contact information is also used to contact the visitor when necessary. Financial information that is collected is used to bill the user for products and services. Demographic and profile data is also collected at our site. This information is shared with advertisers on an aggregate basis.
+
+</font></p><p><font color="#333333">This site contains links to other sites. Brinkster is not responsible for the privacy practices or the content of such Web sites.
+
+</font></p><p><font color="#333333">We may use an outside ad company to display ads on our site. These ads may contain cookies. While we use cookies in other parts of our Web site, cookies received with banner ads are or may be collected by our ad company, and we do not have access to this information. Some customer data is shared with the advertising companies.
+
+</font></p><p><font color="#333333"><strong>Public Forums<br>
+</strong>This site makes chat rooms, forums, message boards, and/or news groups available to its users. Please remember that any information that is disclosed in these areas becomes public information and you should exercise caution when deciding to disclose your personal information.
+
+</font></p><p><font color="#333333"><strong>Security<br>
+</strong>This site has security measures in place to protect the loss, misuse and alteration of the information under our control.
+
+</font></p><p><font color="#333333"><strong>Updating your information<br>
+</strong>We provide mechanisms for updating and correcting your personally identifying information for many of our services. For more information, please see the help pages for each service.
+
+</font></p><p><font color="#333333"><strong>Changes to this Policy<br>
+</strong>Please note this Privacy Policy will change from time to time. We expect most such changes to be minor, but there may be changes that are more significant, we will also provide a more prominent notice. Each version will be noted at the top of the page. Prior versions of this Privacy Policy will be kept in an archive for you to view.
+
+</font></p><p><font color="#333333"><strong>Contacting the Web Site<br>
+</strong>If you have any questions about this privacy statement, the practices of this site, or your dealings with this Web site, you can contact <a href="mailto:info@brinkster.com">info@brinkster.com</a>. 
+		    
+			</font></p></div><font color="#333333">
+			</font></td>
+			<td width="250" valign="top">
+			<div style="">
+			<a href="javascript:ShowDiv('LIVEHELP');"><img src="http://www.brinkster.com/images/aboutus/aboutuslivechat.gif" height="81" width="250" border="0" title="Click Here for Live Chat"></a>
+			</div>
+
+			
+			<div style="font-family:Arial, Helvetica, sans-serif; font-size:12px; padding:15px 0px 0px 15px;">
+			
+			<table border="0" cellpadding="3" cellspacing="0">
+			<tbody><tr>
+				<td aling="right" valign="top">• </td>
+				<td aling="left" valign="top"><a href="http://www.brinkster.com/AboutUs/AboutUs.aspx" style="font-size:11px; color:#333333;" class="standard">About Us</a></td>
+			</tr>
+			<tr>
+				<td colspan="2"></td>
+			</tr>
+			<tr>
+				<td aling="right" valign="top">• </td>
+				<td aling="left" valign="top"><a href="http://www.brinkster.com/AboutUs/WhyBrinkster.aspx" style="font-size:11px; color:#333333;" class="standard">Why Brinkster</a></td>
+			</tr>
+			<tr>
+				<td colspan="2"></td>
+			</tr>
+			<tr>
+				<td aling="right" valign="top">• </td>
+				<td aling="left" valign="top"><a href="http://www.brinkster.com/Server/DataCenter.aspx" style="font-size:11px; color:#333333;" class="standard">Data Center</a></td>
+			</tr>
+			<tr>
+				<td colspan="2"></td>
+			</tr>
+			<tr>
+				<td aling="right" valign="top">• </td>
+				<td aling="left" valign="top"><a href="http://www.brinkster.com/AboutUs/PressRoom.aspx" style="font-size:11px; color:#333333;" class="standard">Press &amp; News Room</a></td>
+			</tr>
+			<tr>
+				<td colspan="2"></td>
+			</tr>
+			<tr>
+				<td aling="right" valign="top">• </td>
+				<td aling="left" valign="top"><a href="http://www.brinkster.com/AboutUs/Legal.aspx" style="font-size:11px; color:#333333;" class="standard">Legal</a></td>
+			</tr>
+			</tbody></table>
+			
+			</div>
+			</td>
+		</tr>
+		</tbody></table>
+	
+	</div>
+		
+	<div style="background-image:url(http://www.brinkster.com/images/aboutus/hline.gif); background-repeat:no-repeat; height:1px; width:950px;"></div>
+
+	<!-- /// BEGIN: Bottom Nav \\\ -->
 	
 <!-- Bottom Control Begin -->
 
@@ -765,10 +759,10 @@ document.write('1999-' + today.getFullYear());
 <!-- Bottom Control End -->
 
 
-<!-- /// END: Bottom Nav \\\ -->
+	<!-- /// END: Bottom Nav \\\ -->
+	
 </div>
 
-</div>
 <!-- #BeginLibraryItem "/Library/bottomLivePerson.lbi" --><script language="JavaScript" type="text/javascript">
 <!--
 var lpPosY = 104;
