jackson.com (archived on 2007-12-30)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;economyandfinance",
  "char_count": 12892,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 15.14,
  "homepage_snapshot_redirected_domain": "jackson.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20071011202301id_/http://www.jackson.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20071011202301id_/http%3A//jackson.com",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "jackson.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071230075055id_/http%3A//www.jackson.com/privacy.html",
  "policy_title": "Jackson, Mississippi Guide to Local Hotels, Lodging, Restaurants, Real Estate, Car Rentals and Area Information",
  "policy_url": "jackson.com/privacy.html",
  "sha1": "fe00a7b3a8bd7a602ccccae4456a75da0df924cd",
  "simhash": 11439508895523859857,
  "simhash_updated": false,
  "site_hostname": "jackson.com",
  "site_url": "http://jackson.com",
  "smog": 16.73,
  "strict_updated": true,
  "timestamp": "20071230075055",
  "word_count": 2096,
  "year": 2007
}

--- a/j/ja/jac/jackson.com.html
+++ b/j/ja/jac/jackson.com.html
@@ -1,11 +1,12 @@
-<!--The following is the downloaded HTML source of the jackson.com privacy policy that was archived on 2007-05-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070502062036id_/http%3A//www.jackson.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jackson.com privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230075055id_/http%3A//www.jackson.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>Jackson, Mississippi Guide to Local Hotels, Lodging, Restaurants, Real Estate, Car Rentals and Area Information</title>
 <meta name="description" content="Jackson.com offers detailed information for Jackson hotels, real estate, Jackson apartments, weather, Jackson Mississippi yellow pages, white pages, Jackson demographics, government information for Jackson Mississippi.">
 <meta name="keywords" content="Jackson hotels,weather,Jackson real estate,apartments,roommate finder,Jackson Mississippi yellow pages,white pages,hotels,motels,demographics,relocation finder,Jackson lodging,real estate agent">
 <link rel="stylesheet" type="text/css" href="http://content.myareaguide.com/jacstyle.css">
+<script src="http://www.traveladvertising.com/Content/EntrievaProxy.aspx?PlacementId=10" language="javascript" type="text/javascript"></script>
 </head>
 <body bgcolor="#FFFFFF" marginwidth="0" marginheight="0" topmargin="0" leftmargin="0">
 <table border="0" cellspacing="0" cellpadding="0"><tbody><tr>
@@ -18,54 +19,17 @@
       Mississippi</div></a></td>
               </tr>
             </tbody></table></td>
-<td bgcolor="#DFD3B9" width="503" align="center"><table width="466" border="0" cellpadding="0" cellspacing="1" class="midbanborder" align="right">
+<td bgcolor="#DFD3B9" width="503" align="center"><div class="relotitle">Find a place to live in Jackson</div>
+<table width="317" border="0" cellpadding="0" cellspacing="0">
   <tbody><tr> 
-    <td> 
-      <table width="466" border="0" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF">
-        <tbody><tr> 
-          <td> 
-            <table width="100%" border="0" cellpadding="0" cellspacing="0" class="midbanborder">
-              <tbody><tr> 
-                <td class="midbanborder" height="24"> 
-                  <div align="center"><font color="#FFFFFF"><b><font face="Arial, Helvetica, sans-serif" size="2">Jackson 
-                    Discount Travel</font></b></font></div>
-                </td>
-              </tr>
-            </tbody></table>
-          </td>
-        </tr>
-        <tr> 
-          <td> 
-            <table width="100%" border="0" cellspacing="0" cellpadding="0">
-              <tbody><tr> 
-                <td> 
-                  <table width="100%" border="0" cellspacing="0" cellpadding="4">
-                    <tbody><tr> 
-                      <td width="26%"> 
-                        <div align="center"><img src="http://images.myareaguide.com/ags/hotel.gif" width="31" height="15"> 
-                          <a href="hotels.html" class="bodytext1">Hotels</a></div>
-                      </td>
-                      <td width="42%"> 
-                        <div align="center"><font color="#333333"><span class="text4"><font color="#000000"><img src="http://images.myareaguide.com/ags/plane.gif" width="49" height="15"></font></span><font color="#000000"> 
-                          </font><span class="bodytext1"><a class="bodytext1" href="/airline_tickets.html"> 
-                          Airline Tickets</a> </span></font></div>
-                      </td>
-                      <td width="32%"> 
-                        <div align="center"><font color="#333333"><span class="text4"><font color="#000000"></font></span><img src="http://images.myareaguide.com/ags/car.gif" width="37" height="18"> 
-                          <a class="bodytext1" href="/car_rentals.html"> Car Rentals</a></font></div>
-                      </td>
-                    </tr>
-                  </tbody></table>
-                </td>
-              </tr>
-            </tbody></table>
-          </td>
-        </tr>
-      </tbody></table>
+    <td width="162"> 
+      <div align="left"><a href="/apartments.html"><img src="http://images.myareaguide.com/images/apt-header.gif" width="150" height="39" border="0"></a></div>
+    </td>
+    <td width="238"> 
+      <div align="right"><a href="/real_estate.html"><img src="http://images.myareaguide.com/images/real-header.gif" width="150" height="39" border="0"></a></div>
     </td>
   </tr>
-</tbody></table>
-</td>
+</tbody></table></td>
 </tr></tbody></table>
 <table border="0" cellspacing="0" cellpadding="0"><tbody><tr>
 <td width="775"><table bordercolor="#cccccc" cellspacing="3" cellpadding="3" width="100%" bgcolor="#ffffff" border="1"><tbody><tr align="middle"><td bgcolor="#cc0000" class="TMHome" align="center"><a href="/index.html" class="TMHomeLink"><font color="#FFFFFF">HOME</font></a></td><td bgcolor="#ffffff" class="TMColumn" align="center"><a href="/yellow.html" class="TMLink">YELLOW PAGES</a></td><td bgcolor="#ffffff" class="TMColumn" align="center"><a href="/white.html" class="TMLink">WHITE PAGES</a></td><td bgcolor="#ffffff" class="TMColumn" align="center"><a href="/hotels.html" class="TMLink">HOTELS</a></td><td bgcolor="#ffffff" class="TMColumn" align="center"><a href="/events.html" class="TMLink">EVENTS</a></td><td bgcolor="#ffffff" class="TMColumn" align="center"><a href="/weather.html" class="TMLink">WEATHER </a></td><td bgcolor="#ffffff" class="TMColumn" align="center"><a href="http://www.areaparks.com" class="TMLink">NATIONAL PARKS</a></td><td bgcolor="#ffffff" class="TMColumn" align="center"><a href="http://www.areatravelpackets.com" class="TMLink">TRAVEL PACKETS</a></td>
@@ -183,8 +147,7 @@
           <td height="1" valign="top" bgcolor="#000000" class="cssNavSep"></td>
         </tr>
         <tr>
-          <td valign="top" class="cssNav"><img src="http://images.myareaguide.com/images/blank.gif" width="12" height="12" border="0" alt="Jackson Find A Realtor"><a class="cssNavLink" href="/findrealtor.html">Find 
-            A Realtor®</a></td>
+          <td valign="top" class="cssNav"><img src="http://images.myareaguide.com/images/blank.gif" width="12" height="12" border="0" alt="Jackson Realtors"><a class="cssNavLink" href="/ypcyellow.html?C=realtors&amp;N=&amp;T=Jackson&amp;S=MS&amp;R=N&amp;SRC=ARE1&amp;STYPE=S&amp;search=Find+It&amp;source=">Realtors</a></td>
         </tr>
         <tr>
           <td height="1" valign="top" bgcolor="#000000" class="cssNavSep"></td>
@@ -510,8 +473,7 @@
     and other sites about goods and services that may be of interest to you. If 
     you would like more information about this practice and to know your choices 
     about not having this information used by these companies, please click here 
-    <a href="http://www.networkadvertising.org/optout_nonppii.asp" target="_blank">http://www.networkadvertising.org/optout_nonppii.asp</a> 
-  </p>
+    <a href="http://www.zedo.com/company/optout.htm">http://www.zedo.com/company/optout.htm</a>.</p>
   <div class="cssContentHead">Disclosure of Personal Information </div>
   <p class="A10">Except as set forth in this Privacy Policy, we do not sell, rent, 
     share, trade or give away any of your Personal Information to third parties. 
@@ -607,12 +569,15 @@ s.server="PAGWA01";
 s.channel="";
 s.pageType="";
 s.hier1= "City Pages|United States|Mississippi|Rankin|Jackson";
-s.prop1= "/privacy.html";
+s.prop2= "Mississippi";
+s.prop6= "Jackson";
 var campaignSource =s.getQueryParam('source');
 if( campaignSource == null || campaignSource == '' ) {
 	campaignSource = s.getQueryParam( 'DNAid' );
 }
 s.campaign = campaignSource;
+s.eVar2= "Jackson";
+s.eVar3= "Mississippi";
 /************* DO NOT ALTER ANYTHING BELOW THIS LINE ! **************/
 var s_code=s.t();if(s_code)document.write(s_code)//--></script>
 <script language="JavaScript"><!--
@@ -622,9 +587,9 @@ if(navigator.appVersion.indexOf('MSIE')>=0)document.write(unescape('%3C')+'\!-'+
 
 <!-- 
 	 ServerName: PAGWA01(PCSDB01) 
-	 SessionID: 7FABC03D14007D4B18D68AF897430DC8 
-	 Date: Wednesday, May 02, 2007 
-	 Time: 12:20:34 AM 
+	 SessionID: 496A89B0CBDEC7A6952D43692F30618A 
+	 Date: Sunday, December 30, 2007 
+	 Time: 12:50:55 AM 
 	 pageID: /privacy.html 
 	 siteID: jacusamssrnkjcksn 
  --></body></html>
