indiaonline.in (archived on 2007-12-30)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": false,
  "categories": "business;education",
  "char_count": 1876,
  "classifier_probability": 0.93,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.37,
  "homepage_snapshot_redirected_domain": "indiaonline.in",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20070928083412id_/http://www.indiaonline.in/",
  "homepage_snapshot_url": "https://web.archive.org/web/20070928083412id_/http%3A//indiaonline.in",
  "interval": "2007_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "panindia.in",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20071230103008id_/http%3A//www.panindia.in/privacypolicy.asp",
  "policy_title": "Pan India Corporation - Privacy Policy",
  "policy_url": "panindia.in/privacypolicy.asp",
  "sha1": "391506c0e8c3a83317aeea3544bcb164cbda8ab0",
  "simhash": 3801419936721279514,
  "simhash_updated": false,
  "site_hostname": "indiaonline.in",
  "site_url": "http://indiaonline.in",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20071230103008",
  "word_count": 310,
  "year": 2007
}

--- a/i/in/ind/indiaonline.in.html
+++ b/i/in/ind/indiaonline.in.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the indiaonline.in privacy policy that was archived on 2007-05-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20070506190238id_/http%3A//www.panindia.in/privacypolicy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the indiaonline.in privacy policy that was archived on 2007-12-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20071230103008id_/http%3A//www.panindia.in/privacypolicy.asp) for the most accurate reproduction.-->
 
 <html><head><title>Pan India Corporation - Privacy Policy</title><style type="text/css">
 <!--
@@ -10,12 +10,7 @@
 --></style>
 </head>
 <body>
-<style type="text/css"><!--
-.style29 {font-weight: bold; font-family: arial; font-size: 16px; color: #000066; }
-.style35 {font-size: 12px}
-.style36 {font-size: 12; }
-.style4 {font-family: arial;font-size: 14px;color: #000066;}
---></style><table width="100%" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF"><tbody><tr><td width="23%" rowspan="2" align="right"><a href="http://www.panindia.in"><img src="http://panindia.in/images/logo.gif" border="0"></a><br></td>
+<table width="100%" border="0" align="center" cellpadding="0" cellspacing="0" bgcolor="#FFFFFF"><tbody><tr><td width="23%" rowspan="2" align="right"><a href="http://www.panindia.in"><img src="http://panindia.in/images/logo.gif" border="0"></a><br></td>
 <td width="77%" height="35" align="right" valign="bottom"><span class="style29">Know India...Now</span></td>
 </tr><tr><td bgcolor="#000000" height="1"></td></tr></tbody></table>
 <br>
@@ -48,5 +43,6 @@ If you have questions about this policy, please <a href="contact.asp">contact us
 .style16 {font-family: Arial;font-size: 10px;}.style25 {font-size: 11px}
 --></style>
 <span class="style16"><span class="style25">© Pan India Corporation 2006 &nbsp;| &nbsp;<a href="http://www.panindia.in/aboutus.asp">About Us</a> &nbsp;|&nbsp;<a href="http://www.panindia.in/network.asp">The Network</a> &nbsp;|&nbsp;<a href="http://www.panindia.in/contact.asp">Advertise with us</a> &nbsp;|&nbsp;<a href="http://www.panindia.in/termsofuse.asp">Terms of Use</a> &nbsp;| &nbsp;<a href="http://www.panindia.in/privacypolicy.asp">Privacy Policy</a> &nbsp;| &nbsp;<a href="http://www.panindia.in/contact.asp">Contact Us</a></span></span>
+
 </div>
 </body></html>
